# OpenLUCA

./: .gitignore  CMakeLists.txt  LICENSE  README.md  config.json
data/: readme.txt
public/: index.html
src/: main.cpp
src/controllers/: taxonomy_controller.cpp  taxonomy_controller.hpp
src/core/: names_parser.cpp  names_parser.hpp  nodes_parser.cpp  nodes_parser.hpp  taxonomy_manager.cpp  taxonomy_manager.hpp
src/services/: lca.cpp  lca.hpp  lineage.cpp  lineage.hpp
